Update manifest.json starry sky favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "short_name": "Starter Kit",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/starry-sky.png",
       "type": "image/png",
       "sizes": "32x32"
     },
     {
-      "src": "/favicon-128x128.png",
+      "src": "/starrysky-128x128.png",
       "type": "image/png",
       "sizes": "128x128"
     },
     {
-      "src": "/favicon-192x192.png",
+      "src": "/starrysky-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
